# api/docs/swagger.json
@@ -185,7 +185,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateDoc"
+                            "$ref": "#/definitions/models.UpdateDocument"
                         }
                     }
                 ],
@@ -358,6 +358,11 @@
         },
         "/api/version/GetAllVersions": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This endpoint gets all documents version.",
                 "consumes": [
                     "application/json"
@@ -404,6 +409,11 @@
         },
         "/api/vesion/RestoreVersion": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This endpoint restores a document's version.",
                 "consumes": [
                     "application/json"
@@ -671,6 +681,20 @@
         "models.GetAllVersions": {
             "type": "object",
             "properties": {
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateDocument": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "docs_id": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
                 }
